[package]
name = "bkup"
version = "0.1.0"
authors = ["Marco C <gliderkite@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
dotenv = "0.13.0"
env_logger = "0.6.1"
failure = "0.1.5"
fs_extra = "1.1.0"
log = "0.4.6"

[dev-dependencies]
lazy_static = "1.3"
uuid = { version = "0.7", features = ["v4"] }
