[package]
name = "bkup"
version = "0.1.1"
authors = ["Marco Conte <gliderkite@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
dotenv = "0.15"
env_logger = "0.8"
failure = "0.1"
ignore = "0.4"
log = "0.4"

[dev-dependencies]
lazy_static = "1.3"
uuid = { version = "0.8", features = ["v4"] }
